# tms-github-actions

./: README.md
.github/workflows/: docker_build.yml  linter.yml  tests.yml
project/: .flake8  Dockerfile  pyproject.toml
project/app/: tests.py
project/project/: settings.py
