[tool.poetry]
name = "tms-github-actions"
version = "0.1.0"
description = ""
authors = ["Aliaksandr Karpovich <alexsure.k@gmail.com>"]
readme = "README.md"
packages = [{include = "tms_github_actions"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
